<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_small">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/pageIndicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_small"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:background="@color/transparent"
        app:tabBackground="@drawable/page_indicator"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        app:tabMaxWidth="@dimen/spacing_normal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountButton"
        style="@style/Widget.OneApp.Button.Rounded.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:minWidth="@dimen/action_button_width"
        android:paddingLeft="@dimen/spacing_medium"
        android:paddingRight="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_normal"
        android:paddingBottom="@dimen/spacing_normal"
        android:text="@string/create_account" />

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:gravity="center_vertical"
        android:minHeight="@dimen/min_touch_target"
        android:orientation="horizontal">

        <TextView
            style="?attr/textAppearanceBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_tiny"
            android:text="@string/already_a_member" />

        <TextView
            style="?attr/textAppearanceBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/link_button_text_selector" />
    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/demoMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/demo_mode"
        android:textColor="?attr/colorOnBackground"
        android:visibility="gone" />
</LinearLayout>